--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ nimha
 nimha_main
 src/alarm/alarm_runner
 src/os/os_runner
+src/timing/cron_runner
 src/owntracks/owntracks_runner
 src/web/web_runner
 src/websocket/wss_runner
