--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -8,3 +8,11 @@ lon = ""
 mqttUsername = ""
 mqttPassword = ""
 mqttAddress = "" # E.g. "tcp://192.168.1.100:1883"
+
+
+[Google]
+mapsAPI = ""
+
+[reCAPTCHA]
+Sitekey = ""
+Secretkey = ""
