--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -1,18 +1,21 @@
 # Rename to secret.cfg
 
 [Home]
+# Insert your home latitude and longitude
 lat = ""
 lon = ""
 
 [MQTT]
+# Connection details to your MQTT broker
 mqttUsername = ""
 mqttPassword = ""
 mqttAddress = "" # E.g. "tcp://192.168.1.100:1883"
 
-
 [Google]
+# Aquire you API key here https://cloud.google.com/maps-platform/#get-started
 mapsAPI = ""
 
 [reCAPTCHA]
+# Register your reCAPTCHA key here https://www.google.com/recaptcha/admin
 Sitekey = ""
 Secretkey = ""
