--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -7,9 +7,11 @@ lon = ""
 
 [MQTT]
 # Connection details to your MQTT broker
+mqttPath = "/usr/bin/mosquitto"
 mqttUsername = ""
 mqttPassword = ""
-mqttAddress = "" # E.g. "tcp://192.168.1.100:1883"
+mqttIp = "" # E.g. "tcp://192.168.1.100:1883"
+mqttPort = "1883"
 
 [Google]
 # Aquire you API key here https://cloud.google.com/maps-platform/#get-started
