--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,31 @@
 
 
-
+# Do not include database
 data/*
 
+# Include screenshots
 private/*
 !private/screenshots/
 
+# Temp folder
 tmp
 tmp/*
 
+# Nimcache folders
 nimcache
 */nimcache
 */*/nimcache
 */*/*/nimcache
 
+# Secret details
 config/secret.cfg
 
+# Main modules
+src/mainmodules/nimha_cron
+src/mainmodules/nimha_gateway
+src/mainmodules/nimha_webinterface
+src/mainmodules/nimha_websocket
+src/mainmodules/nimha_xiaomilistener
+
+# Launcher
 nimha
-nimha_main
-src/alarm/alarm_runner
-src/os/os_runner
-src/timing/cron_runner
-src/owntracks/owntracks_runner
-src/web/web_runner
-src/websocket/wss_runner
-src/www/www_runner
-src/xiaomi/xiaomi_listener
-src/xiaomi/xiaomi_runner
