Add websocket details in secret.cfg

--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -21,3 +21,9 @@ mapsAPI = ""
 # Register your reCAPTCHA key here https://www.google.com/recaptcha/admin
 Sitekey = ""
 Secretkey = ""
+
+[Websocket]
+# The connection details for your websocket
+wsAddress = "127.0.0.1"
+wsProtocol = "ws"
+wsPort = "25437"
