--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -7,7 +7,8 @@ lon = ""
 
 [MQTT]
 # Connection details to your MQTT broker
-mqttPath = "/usr/bin/mosquitto"
+mqttPathSub = "/usr/bin/mosquitto_sub"
+mqttPathPub = "/usr/bin/mosquitto_pub"
 mqttUsername = ""
 mqttPassword = ""
 mqttIp = "" # E.g. "tcp://192.168.1.100:1883"
