--- a/config/secret_default.cfg
+++ b/config/secret_default.cfg
@@ -10,7 +10,7 @@ lon = ""
 mqttPathSub = "/usr/bin/mosquitto_sub"
 mqttPathPub = "/usr/bin/mosquitto_pub"
 mqttUsername = ""
-mqttPassword = ""
+mqttPassword = "" # Create 2 users with the names: nimhawss & nimhagate
 mqttIp = "" # E.g. "tcp://192.168.1.100:1883"
 mqttPort = "1883"
 
