--- a/config/nimha_default.cfg
+++ b/config/nimha_default.cfg
@@ -6,6 +6,10 @@
 lat = ""
 lon = ""
 
+# Sandboxing command used to start modules. When empty, no sandboxing is done.
+#default_sandbox = "/usr/bin/firejail --noprofile --seccomp --caps.drop=all --private-dev --private-tmp --nice=10 --no3d --nodbus --novideo --noroot"
+default_sandbox = ""
+
 [MQTT]
 # Connection details to your MQTT broker
 mqttPathSub = "/usr/bin/mosquitto_sub"
