--- a/config/nimha_default.cfg
+++ b/config/nimha_default.cfg
@@ -1,4 +1,5 @@
-# Rename to secret.cfg
+# Development: config/nimha_dev.cfg
+# Production:  /etc/nimha/nimha.cfg
 
 [Home]
 # Insert your home latitude and longitude
